--- a/scenarios/kapitel-6/steps/0/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/0/src/test/Todo.txt
@@ -1,4 +1,4 @@
-Testfälle:
+Testideen:
 - Leeren Text verschlüsseln
 - Einen Buchstaben verschlüsseln
 - Mehrere unterschiedliche Buchstaben verschlüsseln
