--- a/scenarios/kapitel-6/steps/0/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/0/src/test/Todo.txt
@@ -1,9 +1,26 @@
-Todo für ColumnarTranspositionCipher
-- Leeren Text verschlüsseln
-- Ein Wort verschlüsseln mit Key der Länge 1
-- Mehrere Wörter verschlüsseln mit Key der Länge 1
-- Text verschlüsseln mit Key der Länge 2
+Todos für ColumnarTranspositionCipher
+
+Encryption
+- Leeren Text
+- Key der Länge 1
+- Key der Länge 3
+- Schlüssel länger als Text
 - Langen Text mit langem Key verschlüsseln
+
+Decryption
+- Leeren Text
+- Key der Länge 1
+- Key der Länge 3
+- Schlüssel länger als Text
+- Langen Text mit langem Key verschlüsseln
+
+Cipher-Klasse
+- Zugang von En-/Decryptor über Cipher-Klasse
 - Übersetze Codewörter in Keys
-- Entschlüsselung von Texten
+
+Weiteres
 - Anderes Alphabet benutzen
+- Definiertes Verhalten bei nicht erlaubten Texten oder Schlüsseln
+- Text mit Leerzeichen -> Ignorieren
+- Verschlüsselung von Binärdaten
+
