--- a/scenarios/kapitel-6/steps/0/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/0/src/test/Todo.txt
@@ -8,11 +8,7 @@ Encryption
 - Langen Text mit langem Key verschlüsseln
 
 Decryption
-- Leeren Text
-- Key der Länge 1
-- Key der Länge 3
-- Schlüssel länger als Text
-- Langen Text mit langem Key verschlüsseln
+- Gleiche Beispiele wie Encryption
 
 Cipher-Klasse
 - Zugang von En-/Decryptor über Cipher-Klasse
