--- a/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
@@ -2,7 +2,9 @@ Todos für ColumnarTranspositionCipher
 
 Encryption
 - Leeren Text
-- Key der Länge 1
++ Key der Länge 2
++ Key nicht permutiert
+- Text ist nicht durch Key-Länge teilbar
 - Key der Länge 3
 - Schlüssel länger als Text
 - Langen Text mit langem Key verschlüsseln
