kapitel-6:spock done with encryption

--- a/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
@@ -1,14 +1,14 @@
 Todos für ColumnarTranspositionCipher
 
 Encryption
-- Leeren Text
 + Key der Länge 2
 + Key nicht permutiert
 + Text ist nicht durch Key-Länge 2 teilbar
 + Key der Länge 3
-- Text nicht durch 3 teilbar
-- Schlüssel länger als Text
-- Langen Text mit langem Key verschlüsseln
++ Text nicht durch 3 teilbar
++ Leeren Text
++ Schlüssel länger als Text
++ Langen Text mit langem Key verschlüsseln
 
 Decryption
 - Gleiche Beispiele wie Encryption
