--- a/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
@@ -11,19 +11,19 @@ Encryption
 + Langen Text mit langem Key verschlüsseln
 
 Blocks
-- Split items size divisible by key length
-- Split items size not divisible by key length but no permutation
-- Split items size not divisible by key length with permutation
++ Split items size divisible by key length
++ Split items size not divisible by key length but no permutation
++ Split items size not divisible by key length with permutation
 
 Decryption
 + Leeren Text
 + Key der Länge 2 nicht permutiert
 + Key der Länge 2 permutiert
-- Text ist nicht durch Key-Länge 2 teilbar
-- Key der Länge 3
-- Text nicht durch 3 teilbar
-- Schlüssel länger als Text
-- Langen Text mit langem Key verschlüsseln
++ Text ist nicht durch Key-Länge 2 teilbar
++ Key der Länge 3
++ Text nicht durch 3 teilbar
++ Schlüssel länger als Text
++ Langen Text mit langem Key verschlüsseln
 
 Cipher-Klasse
 - Zugang von En-/Decryptor über Cipher-Klasse
