kapitel-6:spock keyword to key works

--- a/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
+++ b/scenarios/kapitel-6/steps/spock/src/test/Todo.txt
@@ -26,8 +26,8 @@ Decryption
 + Langen Text mit langem Key verschlüsseln
 
 Cipher-Klasse
-- Zugang von En-/Decryptor über Cipher-Klasse
-- Übersetze Codewörter in Keys
++ Zugang von En-/Decryptor über Cipher-Klasse
++ Übersetze Codewörter in Keys
 
 Weiteres
 - Leerzeichen im Text ignorieren
